deployments/camunda/camunda-alb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cais-camunda
  namespace: headless-cms-sandbox
  labels:
    component: cais-camunda
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cais-camunda
  template:
    metadata:
      labels:
        component: cais-camunda
    spec:
      containers:
        - name: cais-camunda
          image: camunda/camunda-bpm-platform:run-latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cais-camunda-svc
  namespace: headless-cms-sandbox
  labels:
    component: cais-camunda
spec:
  type: NodePort
  selector:
    component: cais-camunda
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cais-camunda
  namespace: headless-cms-sandbox
  labels:
    component: cais-camunda
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: cais-camunda
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource) # Additional Notes: https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.3/guide/ingress/ingress_class/#deprecated-kubernetesioingressclass-annotation
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    #alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    #alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
    #alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    #alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    #alb.ingress.kubernetes.io/success-codes: '200'
    #alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    #alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb # Ingress Class
  defaultBackend:
    service:
      name: cais-camunda-svc
      port:
        number: 80
