deployments/camunda/camunda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cais-camunda
  namespace: headless-cms-sandbox
  labels:
    component: cais-camunda
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cais-camunda
  template:
    metadata:
      labels:
        component: cais-camunda
    spec:
      containers:
        - name: cais-camunda
          image: camunda/camunda-bpm-platform:run-latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cais-camunda-svc
  namespace: headless-cms-sandbox
  labels:
    component: cais-camunda
spec:
  type: NodePort
  selector:
    component: cais-camunda
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cais-camunda-ing
  namespace: headless-cms-sandbox
  labels:
    component: cais-camunda
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: apisix
    k8s.apisix.apache.org/upstream-scheme: http
spec:
  tls:
    - hosts:
        - cais-camunda.dair.cloud
      secretName: cais-camunda-ssl-secret
  rules:
    - host: cais-camunda.dair.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cais-camunda-svc
                port:
                  number: 80
